[package]
name = "firmware"
version = "0.1.0"
edition = "2018"

[features]
semihosting = ["cortex-m-semihosting"]

[dependencies]
atsamd-hal = { path = "third_party/atsamd/hal", version = "0.12.0", features = ["samd21g", "samd21g-rt", "unproven", "dma"] }
feather_m0 = { path = "third_party/atsamd/boards/feather_m0", version = "0.9.0", features = ["rt", "panic_halt", "rtic"] }
bitbang-hal = "0.3.2"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cortex-m-rtic = { version = "0.6.0-alpha.5" }
embedded-hal = "0.2.6"
heapless = "0.7.5"
panic-halt = "0.2"
panic-semihosting = "0.5.6"
rtic-monotonic = "0.1.0-alpha.2"
smart-leds = "0.3"
smart-leds-trait = "0.2"
ws2812-spi = {path = "./third_party/ws2812-spi-rs", version = "0.4.0",  features = ["mosi_idle_high"]}

# Optional depenencies
cortex-m-semihosting = { version = "0.3.7", optional = true }

[[bin]]
name = "firmware"
test = false
bench = false

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"

